Java 21
Mavenの設定を変更した。